Item-related templates

--- a/src/pretix/control/templates/pretixcontrol/event/base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/base.html
@@ -31,7 +31,7 @@
                     </li>
                     <li>
                         <a href="{% url 'control:event.settings.payment' organizer=request.event.organizer.slug event=request.event.slug %}"
-                           {% if "event.settings.payment" == url_name %}class="active"{% endif %}>
+                           {% if "event.settings.payment" in url_name %}class="active"{% endif %}>
                             {% trans "Payment" %}
                         </a>
                     </li>
