--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -17,7 +17,7 @@
                 {% bootstrap_field form.mail_bcc layout="control" %}
             </div>
         </fieldset>
-        <div class="panel-group" id="questions_group">
+        <div class="" id="questions_group">
             {% blocktrans asvar title_placed_order %}Placed order{% endblocktrans %}
             {% include "pretixcontrol/event/mail_settings_fragment.html" with pid="order_placed" title=title_placed_order items="mail_text_order_placed" %}
 
