--- a/src/pretix/control/templates/pretixcontrol/items/category.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category.html
@@ -3,20 +3,28 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Product category" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Product category" %}</h1>
-	<form action="" method="post" class="form-horizontal">
-		{% csrf_token %}
+    <form action="" method="post" class="form-horizontal">
+        {% csrf_token %}
         {% bootstrap_form_errors form %}
         <div class="row">
             <div class="col-xs-12{% if category %} col-lg-10{% endif %}">
-                <fieldset>
-                    <legend>{% trans "General information" %}</legend>
-                    {% bootstrap_field form.name layout="control" %}
-                    <div class="internal-name-wrapper">
-                        {% bootstrap_field form.internal_name layout="control" %}
+                <fieldset class="panel panel-default">
+                    <div class="panel-heading">
+                        <legend>{% trans "Product category" %}</legend>
                     </div>
-                    {% bootstrap_field form.description layout="control" %}
-                    {% bootstrap_field form.is_addon layout="control" %}
+                    <div class="panel-body">
+                        {% bootstrap_field form.name layout="control" %}
+                        <div class="internal-name-wrapper">
+                            {% bootstrap_field form.internal_name layout="control" %}
+                        </div>
+                        {% bootstrap_field form.description layout="control" %}
+                        {% bootstrap_field form.is_addon layout="control" %}
+                    </div>
+                    <div class="form-group submit-group">
+                        <button type="submit" class="btn btn-primary btn-save">
+                            {% trans "Save" %}
+                        </button>
+                    </div>
                 </fieldset>
             </div>
             {% if category %}
@@ -32,10 +40,5 @@
                 </div>
             {% endif %}
         </div>
-		<div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
-		</div>
-	</form>
+    </form>
 {% endblock %}
