--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -5,33 +5,38 @@
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "Invoicing" %}</legend>
-            {% bootstrap_field form.invoice_address_asked layout="control" %}
-            {% bootstrap_field form.invoice_address_required layout="control" %}
-            {% bootstrap_field form.invoice_name_required layout="control" %}
-            {% bootstrap_field form.invoice_generate layout="control" %}
-            {% bootstrap_field form.invoice_email_attachment layout="control" %}
-            {% bootstrap_field form.invoice_address_vatid layout="control" %}
-            {% bootstrap_field form.invoice_numbers_consecutive layout="control" %}
-            {% bootstrap_field form.invoice_numbers_prefix layout="control" %}
-            {% bootstrap_field form.invoice_renderer layout="control" %}
-            {% bootstrap_field form.invoice_language layout="control" %}
-            {% bootstrap_field form.invoice_include_free layout="control" %}
-            {% bootstrap_field form.invoice_attendee_name layout="control" %}
-            {% bootstrap_field form.invoice_address_from layout="control" %}
-            {% bootstrap_field form.invoice_introductory_text layout="control" %}
-            {% bootstrap_field form.invoice_additional_text layout="control" %}
-            {% bootstrap_field form.invoice_footer_text layout="control" %}
-            {% bootstrap_field form.invoice_logo_image layout="control" %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                <legend>{% trans "Invoicing" %}</legend>
+            </div>
+            <div class="panel-body">
+                {% bootstrap_field form.invoice_address_asked layout="control" %}
+                {% bootstrap_field form.invoice_address_required layout="control" %}
+                {% bootstrap_field form.invoice_name_required layout="control" %}
+                {% bootstrap_field form.invoice_generate layout="control" %}
+                {% bootstrap_field form.invoice_email_attachment layout="control" %}
+                {% bootstrap_field form.invoice_address_vatid layout="control" %}
+                {% bootstrap_field form.invoice_numbers_consecutive layout="control" %}
+                {% bootstrap_field form.invoice_numbers_prefix layout="control" %}
+                {% bootstrap_field form.invoice_renderer layout="control" %}
+                {% bootstrap_field form.invoice_language layout="control" %}
+                {% bootstrap_field form.invoice_include_free layout="control" %}
+                {% bootstrap_field form.invoice_attendee_name layout="control" %}
+                {% bootstrap_field form.invoice_address_from layout="control" %}
+                {% bootstrap_field form.invoice_introductory_text layout="control" %}
+                {% bootstrap_field form.invoice_additional_text layout="control" %}
+                {% bootstrap_field form.invoice_footer_text layout="control" %}
+                {% bootstrap_field form.invoice_logo_image layout="control" %}
+                <div class="form-group submit-group">
+                    <button type="submit" class="btn btn-default btn-lg" name="preview" value="preview"
+                            formtarget="_blank">
+                        {% trans "Save and show preview" %}
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-save">
+                        {% trans "Save" %}
+                    </button>
+                </div>
+            </div>
         </fieldset>
-        <div class="form-group submit-group">
-            <button type="submit" class="btn btn-default btn-lg" name="preview" value="preview" formtarget="_blank">
-                {% trans "Save and show preview" %}
-            </button>
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
-        </div>
     </form>
 {% endblock %}
