--- a/src/pretix/control/templates/pretixcontrol/item/addons.html
+++ b/src/pretix/control/templates/pretixcontrol/item/addons.html
@@ -3,17 +3,21 @@
 {% load bootstrap3 %}
 {% load formset_tags %}
 {% block inside %}
-    <p>
-        {% blocktrans trimmed %}
-            With add-ons, you can specify products that can be bought as an addition to this product. For example, if
-            you host a conference with a base conference ticket and a number of workshops, you could define the
-            workshops as add-ons to the conference ticket. With this configuration, the workshops cannot be bought
-            on their own but only in combination with a conference ticket. You can here specify categories of products
-            that can be used as add-ons to this product. You can also specify the minimum and maximum number of
-            add-ons of the given category that can or need to be chosen. The user can buy every add-on from the
-            category at most once. If an add-on product has multiple variations, only one of them can be bought.
-        {% endblocktrans %}
-    </p>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {% blocktrans trimmed %}
+                With add-ons, you can specify products that can be bought as an addition to this product. For example,
+                if
+                you host a conference with a base conference ticket and a number of workshops, you could define the
+                workshops as add-ons to the conference ticket. With this configuration, the workshops cannot be bought
+                on their own but only in combination with a conference ticket. You can here specify categories of
+                products
+                that can be used as add-ons to this product. You can also specify the minimum and maximum number of
+                add-ons of the given category that can or need to be chosen. The user can buy every add-on from the
+                category at most once. If an add-on product has multiple variations, only one of them can be bought.
+            {% endblocktrans %}
+        </div>
+    </div>
     <form class="form-horizontal branches" method="post" action="">
         {% csrf_token %}
         <div class="formset" data-formset data-formset-prefix="{{ formset.prefix }}">
