--- a/src/pretix/control/templates/pretixcontrol/item/base.html
+++ b/src/pretix/control/templates/pretixcontrol/item/base.html
@@ -3,34 +3,35 @@
 {% block title %}{{ object.name }} :: {% trans "Product" %}{% endblock %}
 {% block content %}
     {% if object.id %}
-        <h1>{% trans "Modify product:" %} {{ object.name }}</h1>
-        <ul class="nav nav-pills">
-            <li {% if "event.item" == url_name %}class="active"{% endif %}>
-                <a href="{% url 'control:event.item' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
-                    {% trans "General information" %}
-                </a>
-            </li>
-            {% if object.has_variations %}
-                <li {% if "event.item.variations" == url_name %}class="active"{% endif %}>
-                    <a href="{% url 'control:event.item.variations' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
-                        {% trans "Variations" %}
-                    </a>
-                </li>
-            {% endif %}
-            <li {% if "event.item.addons" == url_name %}class="active"{% endif %}>
-                <a href="{% url 'control:event.item.addons' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
-                    {% trans "Add-Ons" %}
-                </a>
-            </li>
-        </ul>
-    {% else %}
-        <h1>{% trans "Create product" %}</h1>
-        <p>{% blocktrans trimmed %}
-            You will be able to adjust further settings in the next step.
-        {% endblocktrans %}</p>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h1 class="panel-title">{% trans "Modify product:" %} {{ object.name }}</h1>
+            </div>
+            <div class="panel-body">
+                <ul class="nav nav-pills">
+                    <li {% if "event.item" == url_name %}class="active"{% endif %}>
+                        <a href="{% url 'control:event.item' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
+                            {% trans "General information" %}
+                        </a>
+                    </li>
+                    {% if object.has_variations %}
+                        <li {% if "event.item.variations" == url_name %}class="active"{% endif %}>
+                            <a href="{% url 'control:event.item.variations' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
+                                {% trans "Variations" %}
+                            </a>
+                        </li>
+                    {% endif %}
+                    <li {% if "event.item.addons" == url_name %}class="active"{% endif %}>
+                        <a href="{% url 'control:event.item.addons' organizer=request.event.organizer.slug event=request.event.slug item=object.id %}">
+                            {% trans "Add-Ons" %}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     {% endif %}
     {% if object.id and not object.quotas.exists %}
-        <div class="alert alert-warning">
+        <div class="alert 1alert-warning">
             {% blocktrans trimmed %}
                 Please note that your product will <strong>not</strong> be available for sale until you have added your
                 item to an existing or newly created quota.
