--- a/src/pretix/control/templates/pretixcontrol/items/category_delete.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category_delete.html
@@ -3,19 +3,26 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Delete product category" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Delete product category" %}</h1>
-	<form action="" method="post" class="form-horizontal">
-		{% csrf_token %}
-		<p>{% blocktrans trimmed with name=category.name %}
-            Are you sure you want to delete the category <strong>{{ name }}</strong>?
-        {% endblocktrans %}</p>
-		<div class="form-group submit-group">
-            <a href="{% url "control:event.items.categories" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
-		</div>
-	</form>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Delete product category" %}</h1>
+        </div>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans trimmed with name=category.name %}
+                    Are you sure you want to delete the category <strong>{{ name }}</strong>?
+                {% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:event.items.categories" organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
