--- a/src/pretix/control/templates/pretixcontrol/items/question_delete.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question_delete.html
@@ -3,23 +3,36 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Delete question" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Delete question" %}</h1>
-	<form action="" method="post" class="form-horizontal">
-		{% csrf_token %}
-		<p>{% blocktrans %}Are you sure you want to delete the question <strong>{{ question }}</strong>?{% endblocktrans %}</p>
-		{% if dependent|length > 0 %}
-			<p>{% blocktrans %}All answers to the question given by the buyers of the following products will be <strong>lost</strong>.{% endblocktrans %}</p>
-			{% for item in dependent %}
-				<li><a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.pk %}">{{ item.name }}</a></li>
-			{% endfor %}
-		{% endif %}
-		<div class="form-group submit-group">
-            <a href="{% url "control:event.items.questions" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
-		</div>
-	</form>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Delete question" %}</h1>
+        </div>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans %}Are you sure you want to delete the question <strong>{{ question }}</strong>
+                    ?{% endblocktrans %}</p>
+                {% if dependent|length > 0 %}
+                    <p>{% blocktrans %}All answers to the question given by the buyers of the following products will be
+                        <strong>lost</strong>.{% endblocktrans %}</p>
+                    <ul>
+                        {% for item in dependent %}
+                            <li>
+                                <a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.pk %}">{{ item.name }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+                <div class="form-group submit-group">
+                    <a href="{% url "control:event.items.questions" organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
