--- a/src/pretix/control/templates/pretixcontrol/items/question_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question_edit.html
@@ -10,26 +10,34 @@
     {% endif %}
 {% endblock %}
 {% block inside %}
-    {% if question %}
-        <h1>{% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}</h1>
-    {% else %}
-        <h1>{% trans "Question" %}</h1>
-    {% endif %}
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "General information" %}</legend>
-            {% bootstrap_field form.question layout="control" %}
-            {% bootstrap_field form.help_text layout="control" %}
-            {% bootstrap_field form.type layout="control" %}
-            {% bootstrap_field form.identifier layout="control" %}
-            {% bootstrap_field form.ask_during_checkin layout="control" %}
-            {% bootstrap_field form.required layout="control" %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                {% if question %}
+                    <h1 class="panel-title">{% blocktrans with name=question.question %}Question:
+                        {{ name }}{% endblocktrans %}</h1>
+                {% else %}
+                    <h1 class="panel-title">{% trans "Question" %}</h1>
+                {% endif %}
+            </div>
+            <div class="panel-body">
+                {% bootstrap_field form.question layout="control" %}
+                {% bootstrap_field form.help_text layout="control" %}
+                {% bootstrap_field form.type layout="control" %}
+                {% bootstrap_field form.identifier layout="control" %}
+                {% bootstrap_field form.ask_during_checkin layout="control" %}
+                {% bootstrap_field form.required layout="control" %}
+            </div>
         </fieldset>
-        <fieldset>
-            <legend>{% trans "Apply to products" %}</legend>
-            {% bootstrap_field form.items layout="control" %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                <legend>{% trans "Apply to products" %}</legend>
+            </div>
+            <div class="panel-body">
+                {% bootstrap_field form.items layout="control" %}
+            </div>
         </fieldset>
         <div class="alert alert-info alert-required-boolean">
             {% blocktrans trimmed %}
@@ -37,77 +45,81 @@
                 accepted. If you want to allow both options, do not make this field required.
             {% endblocktrans %}
         </div>
-        <fieldset id="answer-options">
-            <legend>{% trans "Answer options" %}</legend>
-            <noscript>
-                <p>{% trans "Only applicable if you choose 'Choose one/multiple from a list' above." %}</p>
-            </noscript>
-            <div class="formset" data-formset data-formset-prefix="{{ formset.prefix }}">
-                {{ formset.management_form }}
-                {% bootstrap_formset_errors formset %}
-                <div data-formset-body>
-                    {% for form in formset %}
-                        <div data-formset-form>
-                            <div class="sr-only">
-                                {{ form.id }}
-                                {% bootstrap_field form.DELETE form_group_class="" layout="inline" %}
-                                {% bootstrap_field form.ORDER form_group_class="" layout="inline" %}
-                            </div>
-                            <div class="row question-option-row">
-                                <div class="col-xs-10">
+        <fieldset class="panel panel-default" id="answer-options">
+            <div class="panel-heading">
+                <legend>{% trans "Answer options" %}</legend>
+            </div>
+            <div class="panel-body">
+                <noscript>
+                    <p>{% trans "Only applicable if you choose 'Choose one/multiple from a list' above." %}</p>
+                </noscript>
+                <div class="formset" data-formset data-formset-prefix="{{ formset.prefix }}">
+                    {{ formset.management_form }}
+                    {% bootstrap_formset_errors formset %}
+                    <div data-formset-body>
+                        {% for form in formset %}
+                            <div data-formset-form>
+                                <div class="sr-only">
+                                    {{ form.id }}
+                                    {% bootstrap_field form.DELETE form_group_class="" layout="inline" %}
+                                    {% bootstrap_field form.ORDER form_group_class="" layout="inline" %}
+                                </div>
+                                <div class="row question-option-row">
+                                    <div class="col-xs-10">
                                     <span class="text-muted">
                                         {% blocktrans trimmed with id=form.instance.identifier %}
                                             Answer option {{ id }}
                                         {% endblocktrans %}
                                     </span>
-                                    {% bootstrap_form_errors form %}
-                                    {% bootstrap_field form.answer layout='inline' form_group_class="" %}
-                                </div>
-                                <div class="col-xs-2 text-right">
-                                    <span>&nbsp;</span><br>
-                                    <button type="button" class="btn btn-default" data-formset-move-up-button>
-                                        <i class="fa fa-arrow-up"></i></button>
-                                    <button type="button" class="btn btn-default" data-formset-move-down-button>
-                                        <i class="fa fa-arrow-down"></i></button>
-                                    <button type="button" class="btn btn-danger" data-formset-delete-button>
-                                        <i class="fa fa-trash"></i></button>
+                                        {% bootstrap_form_errors form %}
+                                        {% bootstrap_field form.answer layout='inline' form_group_class="" %}
+                                    </div>
+                                    <div class="col-xs-2 text-right">
+                                        <span>&nbsp;</span><br>
+                                        <button type="button" class="btn btn-default" data-formset-move-up-button>
+                                            <i class="fa fa-arrow-up"></i></button>
+                                        <button type="button" class="btn btn-default" data-formset-move-down-button>
+                                            <i class="fa fa-arrow-down"></i></button>
+                                        <button type="button" class="btn btn-danger" data-formset-delete-button>
+                                            <i class="fa fa-trash"></i></button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                <script type="form-template" data-formset-empty-form>
-                    {% escapescript %}
-                        <div data-formset-form>
-                            <div class="sr-only">
-                                {{ formset.empty_form.id }}
-                                {% bootstrap_field formset.empty_form.DELETE form_group_class="" layout="inline" %}
-                                {% bootstrap_field formset.empty_form.ORDER form_group_class="" layout="inline" %}
-                            </div>
-                            <div class="row question-option-row">
-                                <div class="col-xs-10">
+                        {% endfor %}
+                    </div>
+                    <script type="form-template" data-formset-empty-form>
+                        {% escapescript %}
+                            <div data-formset-form>
+                                <div class="sr-only">
+                                    {{ formset.empty_form.id }}
+                                    {% bootstrap_field formset.empty_form.DELETE form_group_class="" layout="inline" %}
+                                    {% bootstrap_field formset.empty_form.ORDER form_group_class="" layout="inline" %}
+                                </div>
+                                <div class="row question-option-row">
+                                    <div class="col-xs-10">
                                     <span class="text-muted">
                                         {% trans "New answer option" %}
                                     </span>
-                                    {% bootstrap_field formset.empty_form.answer layout='inline' form_group_class="" %}
-                                </div>
-                                <div class="col-xs-2 text-right">
-                                    <span>&nbsp;</span><br>
-                                    <button type="button" class="btn btn-default" data-formset-move-up-button>
-                                        <i class="fa fa-arrow-up"></i></button>
-                                    <button type="button" class="btn btn-default" data-formset-move-down-button>
-                                        <i class="fa fa-arrow-down"></i></button>
-                                    <button type="button" class="btn btn-danger" data-formset-delete-button>
-                                        <i class="fa fa-trash"></i></button>
+                                        {% bootstrap_field formset.empty_form.answer layout='inline' form_group_class="" %}
+                                    </div>
+                                    <div class="col-xs-2 text-right">
+                                        <span>&nbsp;</span><br>
+                                        <button type="button" class="btn btn-default" data-formset-move-up-button>
+                                            <i class="fa fa-arrow-up"></i></button>
+                                        <button type="button" class="btn btn-default" data-formset-move-down-button>
+                                            <i class="fa fa-arrow-down"></i></button>
+                                        <button type="button" class="btn btn-danger" data-formset-delete-button>
+                                            <i class="fa fa-trash"></i></button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    {% endescapescript %}
-                </script>
-                <p>
-                    <button type="button" class="btn btn-default" data-formset-add>
-                        <i class="fa fa-plus"></i> {% trans "Add a new option" %}</button>
-                </p>
+                        {% endescapescript %}
+                    </script>
+                    <p>
+                        <button type="button" class="btn btn-default" data-formset-add>
+                            <i class="fa fa-plus"></i> {% trans "Add a new option" %}</button>
+                    </p>
+                </div>
             </div>
         </fieldset>
         <div class="form-group submit-group">
