--- a/src/pretix/control/templates/pretixcontrol/items/questions.html
+++ b/src/pretix/control/templates/pretixcontrol/items/questions.html
@@ -2,74 +2,89 @@
 {% load i18n %}
 {% block title %}{% trans "Questions" %}{% endblock %}
 {% block inside %}
-    <h1>{% trans "Questions" %}</h1>
-    <p>
-        {% blocktrans trimmed %}
-            Questions allow your attendees to fill in additional data about their ticket. If you provide food, one
-            example might be to ask your users about dietary requirements.
-        {% endblocktrans %}
-    </p>
-    {% if questions|length == 0 %}
-        <div class="empty-collection">
-            <p>
-                {% blocktrans trimmed %}
-                    You haven't created any questions yet.
-                {% endblocktrans %}
-            </p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Questions" %}</h1>
+        </div>
+        <div class="panel-body">
+            {% blocktrans trimmed %}
+                Questions allow your attendees to fill in additional data about their ticket. If you provide food, one
+                example might be to ask your users about dietary requirements.
+            {% endblocktrans %}
+        </div>
+        {% if questions|length == 0 %}
+            <div class="empty-collection panel-body">
+                <p>
+                    {% blocktrans trimmed %}
+                        You haven't created any questions yet.
+                    {% endblocktrans %}
+                </p>
 
-            <a href="{% url "control:event.items.questions.add" organizer=request.event.organizer.slug event=request.event.slug %}"
-                    class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new question" %}</a>
-        </div>
-    {% else %}
-        <p>
-            <a href="{% url "control:event.items.questions.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new question" %}
-            </a>
-        </p>
-        <div class="table-responsive">
-            <table class="table table-hover table-quotas">
-                <thead>
-                <tr>
-                    <th>{% trans "Question" %}</th>
-                    <th>{% trans "Type" %}</th>
-                    <th>{% trans "Products" %}</th>
-                    <th class="action-col-2"></th>
-                    <th class="action-col-2"></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for q in questions %}
+                <a href="{% url "control:event.items.questions.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                   class="btn btn-primary btn-lg"><i class="fa fa-plus"></i> {% trans "Create a new question" %}</a>
+            </div>
+        {% else %}
+            <div class="panel-body">
+                <a href="{% url "control:event.items.questions.add" organizer=request.event.organizer.slug event=request.event.slug %}"
+                   class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new question" %}
+                </a>
+            </div>
+            <div class="table-responsive">
+                <table class="table table-hover table-quotas">
+                    <thead>
                     <tr>
-                        <td><strong><a href="
-                    {% url "control:event.items.questions.show" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}">{{ q.question }}</a></strong>
-                        </td>
-                        <td>
-                            {{ q.get_type_display }}
-                            {% if q.required %}
-                                <span class="fa fa-exclamation-circle text-muted"
-                                data-toggle="tooltip" title="{% trans "Required question" %}">
-                                </span>
-                            {% endif %}
-                        </td>
-                        <td>
-                            <ul>
-                                {% for item in q.items.all %}
-                                    <li><a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}">{{ item }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </td>
-                        <td>
-                            <a href="{% url "control:event.items.questions.up" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-default btn-sm {% if forloop.counter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-up"></i></a>
-                            <a href="{% url "control:event.items.questions.down" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-default btn-sm {% if forloop.revcounter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-down"></i></a>
-                        </td>
-                        <td class="text-right">
-                            <a href="{% url "control:event.items.questions.edit" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
-                            <a href="{% url "control:event.items.questions.delete" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
-                        </td>
+                        <th>{% trans "Question" %}</th>
+                        <th>{% trans "Type" %}</th>
+                        <th>{% trans "Products" %}</th>
+                        <th class="action-col-2"></th>
+                        <th class="action-col-2"></th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        {% include "pretixcontrol/pagination.html" %}
-    {% endif %}
+                    </thead>
+                    <tbody>
+                    {% for q in questions %}
+                        <tr>
+                            <td><strong><a href="
+                    {% url "control:event.items.questions.show" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}">{{ q.question }}</a></strong>
+                            </td>
+                            <td>
+                                {{ q.get_type_display }}
+                                {% if q.required %}
+                                    <span class="fa fa-exclamation-circle text-muted"
+                                          data-toggle="tooltip" title="{% trans "Required question" %}">
+                                </span>
+                                {% endif %}
+                            </td>
+                            <td>
+                                <ul>
+                                    {% for item in q.items.all %}
+                                        <li>
+                                            <a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}">{{ item }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                            <td>
+                                <a href="{% url "control:event.items.questions.up" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}"
+                                   class="btn btn-default btn-sm {% if forloop.counter0 == 0 %}disabled{% endif %}"><i
+                                        class="fa fa-arrow-up"></i></a>
+                                <a href="{% url "control:event.items.questions.down" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}"
+                                   class="btn btn-default btn-sm {% if forloop.revcounter0 == 0 %}disabled{% endif %}"><i
+                                        class="fa fa-arrow-down"></i></a>
+                            </td>
+                            <td class="text-right">
+                                <a href="{% url "control:event.items.questions.edit" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}"
+                                   class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
+                                <a href="{% url "control:event.items.questions.delete" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}"
+                                   class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="panel-footer">
+                {% include "pretixcontrol/pagination.html" %}
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
