--- a/src/pretix/static/pretixcontrol/scss/_dashboard.scss
+++ b/src/pretix/static/pretixcontrol/scss/_dashboard.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
-  margin-left: -5px;
-  margin-right: -5px;
+  margin-left: -10px;
+  margin-right: -10px;
+  margin-bottom: 10px;
+  margin-top: -10px;
 }
 
 .dashboard .widget-container {
@@ -11,10 +13,10 @@
   align-self: stretch;
   padding: 15px 5px;
   min-height: 160px;
-  margin: 5px;
+  margin: 10px;
 
   background: white;
-  box-shadow: 0 7px 14px 0 rgba(78, 50, 92, 0.1),0 3px 6px 0 rgba(0,0,0,.07);
+  box-shadow:0 2px 5px 0 rgba(78,50,92,.1),0 1px 1px 0 rgba(0,0,0,.07);
   border-radius: $panel-border-radius;
 }
 
