--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -105,9 +105,7 @@ h1 .btn-sm {
 .btn-toolbar {
     margin-bottom: 20px;
 }
-.container-fluid > .alert:first-child {
-    margin-top: 20px;
-}
+
 
 .flipped-scroll-wrapper {
     overflow-y: auto;
@@ -171,7 +169,7 @@ p.bigger {
     }
 }
 .empty-collection {
-    margin: 20px 0;
+    padding: 40px 0;
     text-align: center;
 
     p {
@@ -565,6 +563,23 @@ ul.pagination {
 }
 .pagination-container {
     margin-bottom: 20px;
+}
+.panel {
+    ul.pagination {
+        margin: 0;
+        float: right;
+    }
+    ul.pagination-count {
+        float: left;
+    }
+    ul.pagination-select {
+        margin: auto;
+        float: none;
+    }
+    .pagination-container {
+        padding: 0;
+        margin: 0;
+    }
 }
 
 .table-payment-providers > tbody > tr > td {
